# occt-binding

./: .gitignore  CMakeLists.txt  README.MD
src/: module.cpp
